# Video-Player

./: CMakeLists.txt  MediaStatus.cpp  controls.cpp  getMetadata.cpp  global.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  populateFilelist.cpp  ui_mainwindow.h
